--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-10-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-insn.def: /PKL_DEF_INSN/s/, /,/g to not make troubles
+	for Apple cpp (see IMPORTANT2 note in file).
+
 2022-10-10  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-rt.pk (_pkl_print_any): `depth' defaults to 1.
