--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2022-10-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.pks (array_formater): Turn into a macro.
+	(array_printer): Likewise.
+	(array_typifier): Do not fill in `printer' and `formatter' fields.
+
+	* libpoke/pkl-ast.h (PKL_AST_TYPE_A_PRINTER): Remove.
+	(PKL_AST_TYPE_A_FORMATER): Likewise.
+	* libpoke/pkl-ast.c (pkl_ast_make_array_type): Do not initialize
+	A_PRINTER nor A_FORMATER.
+	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Remove handling of arrays
+	and structs printers and formatters.
+	(pkl_gen_pr_type_array): Use macros for printer and formatter.
+
+2022-10-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk (_pkl_print_format_any): Use `integer' styling
 	class.
 
