--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2022-10-12  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Fix indentation
+	for struct formatter.
+
+2022-10-12  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/libpoke.c (pk_print_val): Use `pk_call' properly.
 
 2022-10-12  Jose E. Marchesi  <jemarch@gnu.org>
