--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2022-10-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Fix handling of
+	odepth and of depth.
+	(_pkl_print_any): Set default value of depth to 0.
+	(_pkl_format_any): Likewise.
+
+2022-10-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.h (PKL_AST_TYPE_S_PRINTER): Remove.
 	(PKL_AST_TYPE_S_FORMATER): Likewise.
 	* libpoke/pkl-ast.c (pkl_ast_make_struct_type): Remove struct
